Increased heap size allocation